# M3-IrisLendsAR

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json  settings.local.json
.claude/skills/ar-lens-implement/: SKILL.md
cpp/: CMakeLists.txt
cpp/cmake/: FindTFLite.cmake
cpp/examples/: CMakeLists.txt  camera_demo.cpp  hello_iris.cpp
cpp/include/: iris_sdk.h
cpp/include/iris_sdk/: export.h  frame_processor.h  iris_detector.h  lens_renderer.h  mediapipe_detector.h  types.h
cpp/src/: frame_processor.cpp  iris_detector.cpp  lens_renderer.cpp  mediapipe_detector.cpp  placeholder.cpp
cpp/tests/: CMakeLists.txt  test_camera_demo.cpp  test_frame_processor.cpp  test_iris_detector.cpp  test_lens_renderer.cpp  test_lens_renderer_integration.cpp  test_mediapipe_detector.cpp  test_mediapipe_detector_integration.cpp  test_mediapipe_detector_performance.cpp  test_placeholder.cpp  test_types.cpp
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  DECISION_RECORD.md  DEVELOPMENT_ROADMAP.md  PROJECT_SPEC.md
docs/workPaper/: 000_phase1_plan.md  001_phase1_workflow.md  P1-W1-01_directory_structure.md  P1-W1-02_cmake_setup.md  P1-W1-03_mediapipe_setup.md  P1-W1-04_opencv_setup.md  P1-W2-01_dependency_test.md  P1-W2-02_desktop_build.md  P1-W2-03_android_ndk.md  P1-W2-04_android_crosscompile.md  P1-W3-01_iris_detector_interface.md  P1-W3-02_data_structures.md  P1-W3-03_mediapipe_detector.md  P1-W3-04_detector_unit_test.md  P1-W4-01_lens_renderer.md  P1-W4-02_blending_algorithm.md  P1-W4-03_frame_processor.md  P1-W4-04_sdk_manager.md  P1-W4-05_c_api_wrapper.md  P1-W4-06_integration_test.md  P1-W4-07_camera_demo.md
scripts/: build_android.sh  check_dependencies.sh  download_models.sh  setup_env.sh
